<?xml version="1.0" encoding="utf-8"?>
<!--
	This file is part of BattleChat

    BattleChat is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    BattleChat is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
-->
<resources>

  <string name="app_name">Battle Chat</string>
  <string name="service_name">Battlelog Session Service</string>

  <string-array name="update_interval_entries">
    <item>Every 5 seconds</item>
    <item>Every 10 seconds</item>
    <item>Every 17 seconds</item>
    <item>Every 25 seconds</item>
    <item>Every 30 seconds</item>
    <item>Every minute</item>
  </string-array>
  <integer-array name="update_interval_values">
    <item>5</item>
    <item>10</item>
    <item>17</item>
    <item>25</item>
    <item>30</item>
    <item>60</item>
  </integer-array>

  <string name="menu_exit">Log out</string>
  <string name="msg_message_ok">Message sent!</string>
  <string name="msg_message_fail">Message could not be sent!</string>
  <string name="msg_chat_refresh_fail">Could not reload chat. Please try to re-login.</string>
  <string name="msg_chat_send_message_error">You need to enter a message.</string>
  <string name="msg_chat_send_multiple_error">You\'re already sending the message!</string>
  <string name="msg_chat_load_fail">An error occurred: You can\'t chat with this user.</string>
  <string name="msg_chat_load_error">An error occurred: The website is being stupid.</string>
  <string name="text_notification_title">Battle Chat status</string>
  <string name="text_notification_subtitle_ok">Signed in as %1$s. Tap to open.</string>
  <string name="text_notification_subtitle_fail">Session lost. Tap to login.</string>
  <string name="label_offline">Offline</string>
  <string name="label_online">Online</string>
  <string name="label_group">Group</string>
  <string name="label_playing">Playing</string>
  <string name="msg_no_messages">No messages found. :-(</string>
  <string name="app_email">support@ninetwozero.com</string>
  <string name="msg_no_friends">No friends found. :-(</string>
  <string name="title_settings">Settings</string>
  <string name="title_chat">Chat</string>
  <string name="title_main">@string/app_name</string>
  <string name="msg_chat_sending_message">Sending message&#8230;</string>
  <string name="prompt_email">Origin™ Email</string>
  <string name="prompt_password">Origin™ Password</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="login_progress_signing_in">Signing in&#8230;</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_field_required">This field is required</string>
  <string name="menu_about">About</string>
  <string name="text_login_accept_terms">I accept the terms and conditions.</string>
  <string name="text_preference_notification_title">Display status notification</string>
  <string name="text_preference_notification_on">A notification will be shown.</string>
  <string name="text_preference_notification_off">No notifications will be shown.</string>
  <string name="text_preference_beep_off">You won\'t hear a thing!</string>
  <string name="text_preference_beep_on">Don\'t worry, we\'ll beep you.</string>
  <string name="text_preference_beep_title">Beep for messages</string>
  <string name="text_preference_interval_title">Chat refresh interval</string>
  <string name="title_refresh">Refresh</string>
  <string name="text_chat_loading">Loading messages&#8230;</string>
  <string name="title_about">About</string>
  <string name="text_about_by">By Karl Lindmark</string>
  <string name="text_about_email">support@ninetwozero.com</string>
  <string name="text_about_version">1.0</string>
  <string name="text_chat_title">Chatting with %1$s</string>
  <string name="title_login">Login</string>

  <!-- new strings -->
  <string name="ninetwozero">NINETWOZERO</string>
  <string name="logged_in_as">LOGGED IN AS</string>
  <string name="msg_unable_to_get_friends">Unable to download friends list.</string>

  <string name="label_away">Away</string>
  <string name="label_unknown">Unknown</string>
  <string name="label_you">You</string>
  <string name="desc_gravatar">Gravatar</string>

  <string name="text_main_loading">Loading friends&#8230;</string>

  <string name="chat_group_invited">%1$s was invited</string>
  <string name="chat_group_joined">%1$s joined the chat</string>
  <string name="chat_group_left">%1$s left the chat</string>
  <string name="chat_group_joinedgame">%1$s joined %2$s</string>
  <string name="label_friends">Friends</string>
  <string name="menu_reset_password">Reset password</string>
  <string name="accept">Accept</string>

  <string name="text_login_disclaimer">This app was not created nor is it endorsed by EA/DICE.
    Battlefield is a
    registered trademark of EA Digital Illusions CE AB. No user account information is being stored
    off-device and/or shared with third-parties.\n\n
    By clicking OK below, you acknowledge and accept the terms above.
  </string>
  <string name="cdesc_logo">Application logo</string>
  <string name="startup_title">Welcome to Battle Chat!</string>
  <string name="startup_main_information">Looks like you don\'t have any chats open at the moment.
    Let\'s fix that.
  </string>
  <string name="startup_second_information">Just select a friend to the left to start chatting. :-)</string>
  <string name="startup_start_new">Start a new chat</string>
  <string name="startup_start_random">Start a random chat</string>
  <string name="cdesc_action_item">Action item</string>
  <string name="cdesc_button_send">Send button</string>
  <string name="error_broken_form">Broken form! Please restart the app.</string>
  <string name="cdesc_warning_icon">Warning</string>
  <string name="msg_no_network">This app requires Internet access - are you connected?</string>
  <string name="title_about_changelog">Changelog</string>
  <string name="title_about_author">Developer</string>
  <string name="title_about_collaborators">Collaborators</string>
  <string name="title_about_open_source">Open Source</string>
  <string name="text_about_author_job_title">Software Developer at ninetwozero.com</string>
  <string name="text_about_author_name">Karl Lindmark</string>
  <string name="text_about_author_heading_contact">Ways to contact me</string>
  <string name="text_about_author_heading_whoami">Who am I?</string>
  <string name="web">www.ninetwozero.com</string>
  <string name="text_about_author_visit_website">Visit my website</string>
  <string name="text_about_author_send_email">Send me an good \'ol fashion e-mail</string>
  <string name="account_email">support@ninetwozero.com</string>
  <string name="account_twitter">\@karllindmark</string>
  <string name="text_about_author_tweet_twitter">Tweet with me on Twitter</string>
  <string name="account_googleplus">+KarlLindmark</string>
  <string name="text_about_author_circle_gplus">Circle me on Google+</string>

  <!-- Collab labels -->
  <string name="collab_label_code">Code</string>
  <string name="collab_label_design">Look &amp; Feel</string>
  <string name="collab_label_misc">Miscellaneous</string>

  <!-- Collaborators -->
  <string name="collab_name_peter">Peter Mikloško</string>
  <string name="collab_desc_peter">Partner in Crime on BF4 Intel</string>
  <string name="collab_name_humphreybc">Benjamin Humphrey</string>
  <string name="collab_desc_humphreybc">Re-designed the login UI + startup screen</string>
  <string name="collab_name_dbagjones">Stephen Beaudet</string>
  <string name="collab_desc_dbagjones">Created the awesome logo</string>
  <string name="collab_name_lindyhop">Alexander Lindström</string>
  <string name="collab_desc_lindyhop">Quality Assurance</string>
  <string name="collab_name_stillesjo">Alexander Stillesjö</string>
  <string name="collab_desc_stillesjo">Quality Assurance</string>
  <string name="collab_name_dapil">Daniel Peukert</string>
  <string name="collab_desc_dapil">Translated the app into Czech</string>
  <string name="collab_name_gk">Gustav Karlsson</string>
  <string name="collab_desc_gk">Quality Assurance</string>

  <!-- Open Source labels -->
  <string name="opensource_label_self">This app</string>
  <string name="opensource_label_libs">Libraries</string>

  <!-- Open Source information -->
  <string name="opensource_title_self">Battle Chat</string>
  <string name="opensource_subtitle_self">Licensed under GPL3, source code available on Github
  </string>
  <string name="opensource_title_gson">Gson</string>
  <string name="opensource_subtitle_gson">JSON parsing made easier</string>
  <string name="opensource_title_httprequest">Http Request</string>
  <string name="opensource_subtitle_httprequest">Convenience library for HttpURLConnection</string>
  <string name="opensource_title_jsoup">jsoup</string>
  <string name="opensource_subtitle_jsoup">Html Parsing Library</string>
  <string name="opensource_title_otto">Otto</string>
  <string name="opensource_subtitle_otto">Android MessageBus implementation</string>
  <string name="opensource_title_picasso">Picasso</string>
  <string name="opensource_subtitle_picasso">Awesome Image Loading Library</string>
  <string name="label_about_changelog_for">Changelog for</string>
</resources>