<?xml version="1.0" encoding="utf-8"?><!--
	This file is part of BattleChat

    BattleChat is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    BattleChat is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:sample="http://schemas.android.com/apk/res/com.ninetwozero.battlechat">

  <CheckBoxPreference
    android:defaultValue="false"
    android:key="persistent_notification"
    android:summaryOff="@string/text_preference_notification_off"
    android:summaryOn="@string/text_preference_notification_on"
    android:title="@string/text_preference_notification_title" />
  <CheckBoxPreference
    android:defaultValue="true"
    android:key="beep_on_new_message"
    android:summaryOff="@string/text_preference_beep_off"
    android:summaryOn="@string/text_preference_beep_on"
    android:title="@string/text_preference_beep_title" />

  <com.ninetwozero.battlechat.utils.IntegerListPreference
    android:defaultValue="25"
    android:key="chat_refresh_interval"
    android:title="@string/text_preference_interval_title"
    sample:entryList="@array/update_interval_entries"
    sample:valueList="@array/update_interval_values" />

</PreferenceScreen>