<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/navigation_drawer_bg">

  <LinearLayout
    android:id="@+id/wrap_login_name"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:gravity="left|center"
    android:paddingLeft="@dimen/spacing_m"
    android:paddingRight="@dimen/spacing_m"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/logged_in_as"
      android:textAllCaps="true"
      android:layout_marginRight="@dimen/spacing_xs"
      android:textAppearance="@android:style/TextAppearance.Holo.Small.Inverse"
      android:textColor="@color/grey"
      />

    <TextView
      android:id="@+id/login_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAllCaps="true"
      android:layout_marginLeft="@dimen/spacing_s"
      android:textAppearance="@android:style/TextAppearance.Holo.Inverse"
      />
  </LinearLayout>

  <ListView
    android:id="@android:id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@color/navigation_listview_divider"
    android:dividerHeight="1px"
    android:layout_below="@id/wrap_login_name"
  />

  <TextView
    android:id="@android:id/empty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:text="@string/msg_no_friends"
    android:textAppearance="@android:style/TextAppearance.Holo.Inverse"/>

  <LinearLayout
    android:id="@+id/wrap_loading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navigation_drawer_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">
    <ProgressBar
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:indeterminate="true"
      />
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="@android:style/TextAppearance.Holo.Inverse"
      android:text="@string/text_main_loading"/>
  </LinearLayout>
</RelativeLayout>