<?xml version="1.0" encoding="utf-8"?>
<!--
	This file is part of BattleChat

    BattleChat is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    BattleChat is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
-->
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/card_activity_bg"
  android:focusable="false"
  >

  <RelativeLayout
    android:id="@+id/wrap_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="#FFFFFF">

    <ImageView
      android:id="@+id/button_send"
      android:layout_width="@dimen/chat_button_size"
      android:layout_height="@dimen/chat_button_size"
      android:layout_alignParentRight="true"
      android:src="@drawable/ic_menu_send"
      android:clickable="true"
      android:contentDescription="@string/cdesc_button_send"
      />

    <EditText
      android:id="@+id/input_message"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_toLeftOf="@id/button_send"
      android:inputType="text"
      android:layout_alignBottom="@id/button_send"
      />
  </RelativeLayout>

  <ListView
    android:id="@android:id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/wrap_form"
    android:dividerHeight="0px"
    android:divider="@android:color/transparent"
    />

  <TextView
    android:id="@android:id/empty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/wrap_form"
    android:gravity="center"
    android:text="@string/msg_no_messages"
    />

  <LinearLayout
    android:id="@+id/status"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <ProgressBar
      style="?android:attr/progressBarStyleLarge"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"/>

    <TextView
      android:id="@+id/message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:fontFamily="sans-serif-light"
      android:text="@string/text_chat_loading"
      android:textAppearance="?android:attr/textAppearanceMedium"/>
  </LinearLayout>
</RelativeLayout>